--- a/_posts/2015-06-26-tty-week.markdown
+++ b/_posts/2015-06-26-tty-week.markdown
@@ -66,3 +66,75 @@ Thus, I've got alpine setup. The only drawback is that you cannot have multiple 
 
 
 Using `fswebcam` and `Imagemagick` I was able to take a stupid selfie and edit it.
+
+
+
+![my workspace]({{site.baseurl}}/assets/tty_week/tty_week_day2_pam_captcha.png)
+
+
+
+I found out that with my tty workflow, where I'm using multiple TTYs as workspaces, the [pam captcha patch](git@github.com:venam/pam_captcha_patch.git)
+I wrote is quite annoying. Most of the time I miss the captcha or the password and I have to redo the procedure all over again.
+I bet that if an attacker would want to force his way into my box he'll certainly give up.
+
+
+#Day 3
+
+
+I didn't spend that day working on my machine, I simply played music remotely using mpd.
+Actually, that's one of the thing I enjoy the most on the TTY, even the music visualizer in ncmpcpp (mpd client) looks great.
+
+
+
+![music]({{site.baseurl}}/assets/tty_week/tty_week_zik.png)
+
+
+
+* A note on how I take screenshots in the TTY:
+
+
+{% highlight bash %}
+sleep 3 && fbdump > myimage.dump
+convert myimage.dump myimage.png
+# insert command to upload image somewhere
+{% endhighlight %}
+
+The advantage of adding a sleep before the framebuffer dump is that it gives you enough time
+to switch between TTYs. This is especially nice because it lets you
+take screenshots when you normally couldn't. For example, the login screen, when playing a video with `mplayer -vo fbdev2`,
+while having any application open that uses the whole pixmap of the frambuffer, etc..
+
+
+#Day 4
+
+
+I spent the morning programming for the urnn (Unix Ricing Neural Network) project.
+
+`links -g` features multiple tabs which is doesn't clobber browsing multiple pages at the same time.
+You can switch through them using ALT+num and open them via the ESC main menu.
+
+Multiplexing with dvtm is certainly one of my main key to keep the flow in my TTY.
+I open the documentation next to my code with a single keybind.
+
+
+#Day 5
+
+
+The timer I wrote went crazy and told me that the week was already over. By thinking
+simply I've made some huge designs failures. Next time I'll think of something else.
+
+I'm using fbgs `Poor man's PostScript/pdf viewer for the linux framebuffer console.` to read pdf books.
+My current readings are about group dynamics psychology.
+
+
+#Day 6
+
+
+I didn't bring my home laptop at work today.
+When I got back home I started working on a generic Lindenmayer System in Perl.
+
+
+#Day 7
+
+
+The TTY week is over. It passed faster then I thought.
