--- a/_posts/2015-08-17-quotes.markdown
+++ b/_posts/2015-08-17-quotes.markdown
@@ -536,7 +536,7 @@ I'm preparing another post that'll discuss this in more depth.
 
 -------------------
 
-> Il faut éter les étapes de la vie comme ço on vivra plus longtemps...
+> Il faut éviter les étapes de la vie comme ço on vivra plus longtemps...
 
 Translated:
 
