--- a/_posts/2015-08-26-on-my-way.markdown
+++ b/_posts/2015-08-26-on-my-way.markdown
@@ -103,7 +103,7 @@ Without further ado.
 
 
 People are kind, the majority of them are blunt but would still
-help if you asked them (probably to not look bad in social situations. If you
+help if you asked them (to not look bad in social situations. If you
 don't ask they'll probably let you die on the street).
 
 Apart from those there are the deeply and innerly kindhearted persons. Those
@@ -127,7 +127,7 @@ I was an actor or a celebrity, those that saw me in their dreams, etc..
 I've had from all the recipes.
 
 
-Do I have a recognizable face? Probably, that would explain a lot...
+Do I have a recognizable face? That would explain a lot...
 
 
 There's a theory on kinship. IBD and IBS, Identity by descendant and state.
@@ -137,7 +137,7 @@ to family members too.
 
 
 When they are afraid or find themselves in hard situations they become more selfish.
-We have ton of selfish/afraid persons on earth.
+We have ton of selfish and afraid persons.
 
 
 
@@ -166,7 +166,7 @@ As usual, I got out of the bus and fought to find a cheap taxi to take me up in
 the mountain. I hopped in the first one that accepted my price and here I go.
 
 
-We had small talks about the country's and the weather and suddenly he brought it.
+We had small talks about the country and the weather and suddenly he brought it.
 
 
 > Your face is familiar. I think I've seen you somewhere.
@@ -197,14 +197,14 @@ I hitchhiked with more people from Rachkida than from my own village. Their
 isolation might have something to do with their generous mindset.
 
 
-NB: I wasn't born in Batroun, I was born in Quebec, Canada. So you can probably discard
+NB: I wasn't born in Batroun, I was born in Quebec, Canada. So you can discard
 the IBS and IBD theory.
 
 
 ##The Mini Stories And Tips
 
 
-This section is big thanks to all the life tips I've got from the conversations
+This section is a big thanks to all the life tips I've got from the conversations
 with strangers and taxi drivers.
 
 Thanks for the relationship advices, for the wedding advices, for the advices on
@@ -234,7 +234,7 @@ other customers. Mostly, they were teachers at LAU, a university in the Byblos
 region.
 
 
-In their group there was an alpha dude with the brand new car and Ray Ban sunglasses.
+In their group was an alpha dude with the brand new car and Ray Ban sunglasses.
 He talked vividly and sometimes read newspapers.
 
 
@@ -266,14 +266,14 @@ reading.
 It's not the first time that this happens, it's frequent. I make some persons
 uncomfortable, I make them stress.
 I don't do it on purpose even though I enjoy people loosing themselves to fear
-when, on the other hand, you are composed and in control.
+when, on the other hand, I am composed and in control.
 It might be due to my self-confidence and how stoic I am.
 
 
 ##The Bearded Guys and The Lighthouse Play
 
 
-I don't use to go out late because I don't have a car. I thought it would be
+I used to not go out late because I don't have a car. I thought it would be
 too much of a hassle to get back home.
 
 Since I started working I got over it. I go wherever I want at whatever time I
@@ -284,16 +284,16 @@ That day I was back from a hangout with friends at around 3am.
 There are still min-van, public transport, passing at those late hours but
 they are scarce or completely filled and can't stop to take more passengers.
 
-I was tired and had been waiting for 20min when another dude comes to wait
-with me. 30min later another one comes wait with us.
+I was tired and had been waiting for 20min when another dude come to wait
+with me. 30min later another one come wait with us.
 
 
-We're three dudes waiting on the highway.
+We were three dudes waiting on the highway.
 
 
 One of the guys decide that we should take turn and use the flashlight to catch
 the attention of the mini-vans.
-Thus, we've took 3 turns of 30min and finally found someone to take us home.
+Thus, we took 3 turns of 30min and finally found someone to take us home.
 
 
 Playing lantern on the highway was long but brotherhood was strong.
@@ -304,8 +304,7 @@ me from Batroun to my village, Ebrine.
 
 
 One of these days I called the company's office and they told me that no cab
-was available for at least an hour. I had no other options so I told them I would
-wait.
+was available for at least an hour. I had no other options but to wait.
 
 
 Tired, I sat down and waited.
@@ -317,7 +316,7 @@ I like the beard, people don't mess with you when you have _the beard_.
 
 
 Fifteen minutes of waiting and a couple of two big bearded guys stop and ask
-where I was going. I tell them and they make sign that they're going there.
+where I was going. I told them and they make sign that they're going there.
 
 
 It's 1:30am, and I'm driving with 2 huge bearded guys.
@@ -371,14 +370,15 @@ All of a sudden, a taxi coming from Batroun drops someone a bit further down the
 road. When he gets back I stop him and ask if he could take me to the highway.
 
 
-He argues that because he's working for an office he can only drive people
-that orders them. I reply that he was going down anyway and that'll only
-make him extra bucks. He's stubborn and doesn't want to. I tell him to get the
+He argued that because he was working for an office he could only drive people
+that orders them by calling the office. I replied that he was going down anyway
+and that would only
+make him extra bucks. He was stubborn and didn't want to. I told him to get the
 fuck off and to go alone down the mountain.
 
 
-The truck driver that just finished filling the station raises his hand and makes
-a sign that he will take me.
+The truck driver that just finished filling the station raised his hand and made
+a sign that he would take me.
 
 
 It was one of those giant vehicle, a monster. I climbed up the ladder and sat in
@@ -403,7 +403,7 @@ an even better one.
 ##The Copy Man and The Good Men
 
 
-There are mornings when I wait to go down from my village that people offer
+There are mornings when I wait to go down from my village and some people offer
 longer hitchhikes because we're going on the same road.
 
 
@@ -422,7 +422,7 @@ Amongst them were many others but a specific one caught my attention, a
 fabulous man named Aatef.
 
 
-Aatef was another one of those those that thought they knew me but that time I
+Aatef was another one of those that thought they knew me but that time I
 also thought I knew him.
 
 
@@ -443,10 +443,10 @@ I wished him a pleasant day and moved on. But it wasn't the last time I saw him.
 
 
 About 3 weeks later I was waiting to hitchhike my way back home from Batroun
-to Ebrine when someone stops me, it was Aatef.
+to Ebrine when someone stopped me, it was Aatef.
 
 
-I ask him about his friends, his daughter, how the card games went, and tell
+I asked him about his friends, his daughter, how the card games went, and told
 him I was soon gonna buy my first car. He was genuinely happy for me and we
 argued about what were the best choices. He stopped to buy medicine for the
 baby and when he came back he gave me life advices about family and kids.
@@ -469,7 +469,7 @@ _NB_:He was from Rachkida.
 
 
 A sloppy usual morning in the bus I was listening to music.
-I remove the ear buds to hear what the driver was angry about. He was asking
+I removed the ear buds to hear what the driver was angry about. He was asking
 to wake up a kid in the back.
 We do so and ask where he wants to be dropped off.
 
@@ -477,23 +477,23 @@ We do so and ask where he wants to be dropped off.
 > Jbeil, Jbeil
 
 
-We pass past Jbeil and the discontent driver tells us to bring the kid to the front,
-to wake him up. We do so, the kid looks angry and doesn't want to sit in the front.
+We pass past Jbeil and the discontent driver told us to bring the kid to the front,
+to wake him up. We do so, the kid looked angry and didn't want to sit in the front.
 
 > Drop me in Jounieh, Jounieh...
 
-And he stumbles back to the end of the bus. Past Jounieh the driver
-looses his nerves, "Where's the kid?", "Make him sit next to me so I know where he wants to go", "Who leaves kids alone in a bus".
+And he stumbled back to the end of the bus. Past Jounieh the driver
+loosed his nerves, "Where's the kid?", "Make him sit next to me so I know where he wants to go", "Who leaves kids alone in a bus".
 
 
-At that exact moment the kids opens the window, climbs out of the bus,
+At that exact moment the kid opens the window, climbs out of the bus,
 and jumps on the highway. The bus driver instantly hits the brakes.
 
 He gets out and shout at the kid for doing stupidities.
 
-Back in he explains that this kid is an errand, going around not knowing
-what he is doing.
-That kid come from the poorest place in Tripoli, a harsh place.
+Back in he explains that this kid was an errand, going around not knowing
+what he was doing.
+That kid came from the poorest place in Tripoli, a harsh place.
 
 When you are a kid left alone you become a beast.
 
@@ -512,21 +512,21 @@ I saw the figure of an old crooked woman approaching and had the goosebumps.
 She took place in the shadow of the tree next to me.
 
 
-I politely say hello and she waves back.
+I politely said hello and she waved back.
 
 
-A mini-truck pass by and stops for me. He says to ask the woman if she wanna
-join. I get up first and help her climb.
+A mini-truck passed by and stopped for me. He said to ask the woman if she wanted
+to join. I got up first and helped her climb.
 
 
 It turned out that the driver and her knew each others. They opened with the
-typical talk about their lives which people usually lie about.
+typical talk about their lives, which people usually lie about.
 
 
-I listen carefully.
+I listened carefully.
 
 
-The man then asks a question that changed the look on her face.
+The man then asked a question that changed the look on her face.
 
 > Didn't you have a place that sell tires.
 > I think I used to go there.
@@ -537,7 +537,7 @@ She got pale.
 
 She explained that her place wasn't a place anymore.
 She was too kind and it brought bad luck.
-Her place was in a place where there was a good amount of Syrian refugees.
+Her place was in a region where there was a good amount of Syrian refugees.
 
 These days we have a lot of Syrian kids without parents and no one to take care
 of them. She took it upon herself to give them shelter in her little tire spot.
@@ -548,7 +548,7 @@ her workplace to ashes!
 
 
 Since that day she developed post-traumatic behaviors towards Syrians. She turned
-wary of who she's dealing with but still believed that there are people with positive
+wary of who she was dealing with but still believed that there are people with positive
 intentions.
 
 Then she gently tapped on my leg and told me:
@@ -562,13 +562,13 @@ Then she gently tapped on my leg and told me:
 > Ma'am, but but but, wait a bit, let me explain, I'm not Syrian!
 
 
-She thought, because of my accent, that I was Syrian. That explained why I felt
+She thought that, because of my accent, I was Syrian. That's why I felt
 a tension when she walked towards me.
 
 I explained to her who I was.
 
 
-I help her get off and she adds; 
+I helped her get off and she added:
 
 
 > If you see me one day and I look angry or weird it's because I'm taking pills for anger and stress management.
@@ -580,12 +580,14 @@ I help her get off and she adds;
 I was walking down the road from my office to the first intersection where I
 can take a taxi, a 30 min walk, when a superb car of the year opens its window.
 
+
 There are only two buildings that this guy could have come from, the ESIB university,
 the university of engineering, or the Waves resort, a place to relax with pools
 and restaurants.
 
 
 Strangely, it was the first time that someone offered me a ride on this road.
+
 
 He was wearing a pair of black sunglasses in a car with black tinted windows.
 
@@ -595,6 +597,7 @@ We had the typical talk about what I do in life but I didn't ask about his.
 
 All of a sudden, he asked how old I was; 22; and directly followed with "You are 22 now,
 Patrick, can I ask you a question?". I said "shoot me, I'm ready".
+
 
 He started a monologue about what I see in the mirror. I couldn't
 really grasp all he was trying to say because I'm not very fluent
@@ -639,7 +642,7 @@ of the window_ to see if there are cars in your dead angle!".
 ##You Are Not My Dad
 
 
-It the after work hours, I was in a taxi going to Daoura so I could
+In the after work hours, I was in a taxi going to Daoura so I could
 take the bus. We were four, the driver which was an old man, a middle-aged man
 sitting in the front, a teenager, and me.
 
@@ -705,6 +708,7 @@ The driver:
 
 
 Two guys in another car next to us told them to relax.
+
 It was still tense.
 
 
@@ -719,9 +723,9 @@ Damn, I couldn't believe it, and old man being shout at as if he was a little ch
 ##African Beauty
 
 
-In a taxi with an unusually happy driver. He even offered to take me further down
-the road because it was on his way, but he said he had to take an African women
-in town before.
+In a taxi with an unusually happy driver. He offered to take me further down
+the road because it was on his way, but said he had to take an African women
+in town.
 
 
 She hopped in and start chatting.
@@ -740,8 +744,8 @@ The stores were closed at this hour. The driver asked her if work was good these
 > Many madam, many. But miss FISH crazzzy!
 
 
-The driver looked at her and asked again but this time hit his fist in
-his palm at the same time.
+The driver looked at her and asked again but this time while hitting his fist in
+his palm.
 
 
 > hmmm, work work (as she is doing the same movement)
@@ -805,7 +809,9 @@ Another day, when I was going to Daoura in taxi.
 One minute driving and he said "Want to have some entertainment on the road and
 read something interesting?" while handing me a paper in Arabic.
 
-I excuse myself because I can't read Arabic and asked about what's written on it.
+
+I excused myself because I can't read Arabic and asked about what was written.
+
 
 He told me stuffs I couldn't understand clearly, another one of those philosophical
 dude.
@@ -825,13 +831,13 @@ That made sense, so I agreed. Another passenger got in.
 He told him the same thing and handed over a paper then continued his talk.
 
 
-He suddenly said that he was a software developer in Frankford before, the guy
-in the back said that he also worked as a developer, and I said "That make three of us".
+He suddenly said that he used to be a software developer in Frankford, the guy
+in the back said that he also worked as a developer, and I said "That makes three of us".
 
 
-He mumbled things he could remember from that time, a bunch of blurred memories.
+He mumbled what he could remember from that time, a bunch of blurred memories.
 
-I asked why he left his job and he said it was because time change. You can't
+I asked why he left his job and he said it was because time change, you can't
 always be up-to-date.
 
 
@@ -840,17 +846,17 @@ He continued to mumble his non-sense and I could feel his delusion.
 
 He said "I've put everything on that paper" while pointing to his head.
 
-From what I heard he was trying to predict the future, but he's probably not a
+From what I heard he was trying to predict the future, but he wasn't a
 [futurist](http://venam.nixers.net/blog/philosophy/2015/08/12/futurists.html).
 
 
 I got a bit worried, do all people working in the tech field become crazy like him.
 Some professions have tendencies to make you more delusional than others,
-such as software engineering, neurology, and maths. ([Alain](https://www.youtube.com/watch?v=77P2FXWZY0g))
+software engineering, neurology, and maths. ([Alain](https://www.youtube.com/watch?v=77P2FXWZY0g))
 
 
 There's also the fact that there currently are a lot of problems in the country
-and some types of people don't cope well with it. I'm seen more and more of those
+and some types of people don't cope well with it. I'm seeing more and more of those
 these days.
 
 
@@ -865,7 +871,7 @@ I left and kept the paper.
 
 Back home I asked my brother to do the translation.
 
-He told me it was some sort of delusional pantheist sect or just sentences that
+He told me it was some sort of delusional pantheist sect and sentences that
 didn't make sense.
 
 
@@ -877,13 +883,13 @@ There was a number at the end of the paper with a note:
 
 ##Three Guys one kid
 
-Three poor Syrian guys in a car stop me, a car that was almost falling to pieces.
 
-They also have a kid with them.
+Three poor Syrians in a car stopped me, a car that was almost falling to pieces.
+
+They also had a kid with them.
 
 
-I couldn't get anything of what they were saying because their accent was too
-different than the local one.
+I couldn't get anything of what they were saying because of their strong accent.
 
 
 One thing surprised me.
@@ -896,7 +902,7 @@ One of the guy even said "It was finally time we got a kid for ourselves".
 
 
 Three poor guys putting all their efforts to take care of a single kid.
-That's way better than letting your kid on the road jumping from buses.
+That's way better than letting your kid on the road to jump from buses.
 
 
 ##Conclusion
