quotes page and a little fix

--- a/_posts/2015-08-17-quotes.markdown
+++ b/_posts/2015-08-17-quotes.markdown
@@ -313,7 +313,7 @@ The quote is breathtaking it gives you faith in humanity.
 > So, that's a movie that has not yet been made but the question is "Is that the right category" "Is the correct category".
 > It's just another movie! In which case, there's a lot of those, it's super competitive, incredibly hard to make money, no one ever makes money in Hollywood.
 
-- Paypal founder, Elon Musk
+- Paypal founder, Peter Thiel
 
 A harsh quote to put you back on track when you're dreaming about non-sense
 projects.
