--- a/_posts/2016-04-02-health.markdown
+++ b/_posts/2016-04-02-health.markdown
@@ -82,8 +82,7 @@ Keep your body strong and ready.
 ### Hygiene ###
 
 
-There is absolutely nothing on earth that humans cannot win against except
-bacterias and viruses.
+There is absolutely nothing on earth humans cannot win against, we took down everything. The warzone is now on a microscopical level.
 
 We've grown an internal self-learning army to fight against them.
 
