new ascii and update post

--- a/_posts/2016-04-02-health.markdown
+++ b/_posts/2016-04-02-health.markdown
@@ -395,3 +395,39 @@ Hope you enjoyed my article.
 As I've said, my opinions aren't fixed, If you want to argue contact me.
 
 If you love what I write about buzz me and we'll have a beer together someday!
+
+_Update_ 12-04-2016:
+
+I discovered an [article by James W. Prescott](http://www.violence.de/prescott/bulletin/article.html) through Stefan Molyneux [podcast](https://www.youtube.com/watch?v=MKVMXQD2aXc)
+discussing the deep correlation between body pleasure and the origin of violence.
+
+In summary it explains how affection, and bonding between parents and children
+is the root of future violence and dis-functions as adults.
+
+The more a society experience pleasure the less it inflicts pain and vice-versa.
+
+Societies with strong denial of body contacts and shaming of natural instincts
+have the highest rate of violence.
+
+It has also been discussed how in those society products which enhance violence
+are approved but not the ones who are pro-pleasure. For instance:
+
+> Respondents who reject abortion, responsible premarital sex, and nudity within the family were likely to approve of harsh physical punishment for children and to believe that pain helps build strong moral character. These respondents were likely to find alcohol and drugs more satisfying than sex. 
+
+And also:
+
+> Alcohol is well known to facilitate the expression of violent behaviors, and, although addicting and very harmful to chronic users, is acceptable to U.S. society. Marijuana, on the other hand, is an active pleasure-inducing drug which enhances the pleasure of touch and actively inhibits violent-aggressive behaviors. It is for these reasons, I believe that marijuana is rejected in U.S. society. For similar reasons heroin is rejected and methadone (an addicting drug minus the pleasure) is accepted. 
+
+There's a correlation between marital non-sexual satisfaction,
+somatosensory deprivation and non-affectionate parents, and extramarital affairs.
+
+Those people have lost the ability to bond with their partner and so they jump
+from one person to another in the hope it'll be better.
+
+Like with the alcohol, anything acts as a suppressor of the pain inflicted in
+childhood.
+
+> Available data clearly indicate that the rigid values of monogamy, chastity, and virginity help produce physical violence. The denial of female sexuality must give way to an acceptance and respect for it, and men must share with women the responsibility for giving affection and care to infants and children. As the father assumes a more equal role with the mother in child-rearing and becomes more affectionate toward his children, certain changes must follow in our socioeconomic system. A corporate structure which tends to separate either parent from the family by travel, extended meetings, or overtime work weakens the parent-child relationship and harms family stability. To develop a peaceful society, we must put more emphasis on human relationships. 
+
+All and all, it's only with understanding of natural behavior, love, and affection
+that we can correct violence in society.
