--- a/_posts/2016-03-13-driving.markdown
+++ b/_posts/2016-03-13-driving.markdown
@@ -318,3 +318,11 @@ Let's change this countrie's mindset of _impatient opportunistic exploitation_.
 Thanks for reading,  
 This was a bit what _explorable explanation_ is like.  
 As usual if you like what I write about please buzz me and we'll have a beer together someday.
+
+_Update 22-04-2016_:  
+
+An article correlating driving habits and the overall situation in a country
+just came out, [here](http://www.citymetric.com/horizons/streets-bucharest-how-road-behaviour-correlates-trust-government-2015)'s the link to it.
+
+>  And this kind of makes sense too, as roads are almost a perfect microcosm of what states do on a larger scale. On a road network, you have many different actors all behaving in a self-interested manner, trying to reach their own goals – and in order to manage this efficiently, there are rules in place to try to try and make the whole thing more efficient. If, for some reason, people decide not to follow these rules, then the whole thing breaks down – and the result is chaos.
+
