--- a/_posts/2016-11-13-mind-maps.markdown
+++ b/_posts/2016-11-13-mind-maps.markdown
@@ -221,6 +221,9 @@ a node moving them will also move other children so that they don't overlap.
 I would highly recommend it as it's the only one, other than labyrinth, that
 allow floating nodes and doesn't restrict the tree hierarchy.
 
+#More
+
+You can finf a full list of mind map softwares on [this wikipedia page](https://en.wikipedia.org/wiki/List_of_concept-_and_mind-mapping_software).
 
 -----
 
