--- a/_posts/2016-11-14-hungry.markdown
+++ b/_posts/2016-11-14-hungry.markdown
@@ -71,7 +71,7 @@ That definitely has its key role here!
 Those are all valid points that makes eating alone at the restaurant
 uncomfortable.
 
-Thus, if you feel the same way I do about this matter you may grad a
+Thus, if you feel the same way I do about this matter you may grab a
 "quick-bite" instead of sitting in a restaurant.
 
 Or you may not feel the same way and that's fine. I hope I did too so
